[tool.poetry]
name = "packgenlite"
version = "1.2.0"
description = "Package builder for Data Science projects derived from https://github.com/lologibus2/wagon_tools"
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^9"
setuptools = "^26"
wheel = "^0.29"
pandas = "^1.2.4"
python-gitlab = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
